Refactoring. Improving codebase
