# internal/web/subscribers_handlers.go
@@ -4,8 +4,8 @@ import (
 	"time"
 
 	"github.com/beesbuddy/beesbuddy-worker/internal/app"
-	"github.com/beesbuddy/beesbuddy-worker/internal/config"
 	"github.com/beesbuddy/beesbuddy-worker/internal/dto"
+	p "github.com/beesbuddy/beesbuddy-worker/internal/pref"
 	"github.com/gofiber/fiber/v2"
 	"github.com/samber/lo"
 )
@@ -15,7 +15,7 @@ import (
 // @Description Get subscribers
 // @Tags settings
 // @Produce json
-// @Success 200 {object} dto.ResponseHTTP{data=[]settings.Subscriber}
+// @Success 200 {object} dto.ResponseHTTP{data=[]dto.SubscriberOutput}
 // @Failure 503 {object} dto.ResponseHTTP{}
 // @Router /settings/subscribers [get]
 // @Security ApiKeyAuth
@@ -24,7 +24,7 @@ func ApiGetSubscribers(ctx *app.Ctx) fiber.Handler {
 		return f.JSON(dto.ResponseHTTP{
 			Success: true,
 			Message: "Successfully fetched subscribers",
-			Data:    ctx.Config.GetCfg().Subscribers,
+			Data:    ctx.Pref.GetConfig().Subscribers,
 		})
 	}
 }
@@ -34,7 +34,7 @@ func ApiGetSubscribers(ctx *app.Ctx) fiber.Handler {
 // @Description Create a subscriber
 // @Tags settings
 // @Produce json
-// @Success 200 {object} dto.ResponseHTTP{data=[]settings.Subscriber}
+// @Success 200 {object} dto.ResponseHTTP{data=[]dto.SubscriberOutput}
 // @Failure 503 {object} dto.ResponseHTTP{}
 // @Param dto.SubscriberInput body dto.SubscriberInput true "Subscriber"
 // @Router /settings/subscribers [post]
@@ -42,27 +42,30 @@ func ApiGetSubscribers(ctx *app.Ctx) fiber.Handler {
 func ApiCreateSubscriber(ctx *app.Ctx) fiber.Handler {
 	return func(f *fiber.Ctx) error {
 		newSubscriber := new(dto.SubscriberInput)
+		pref := ctx.Pref
 
 		if err := f.BodyParser(newSubscriber); err != nil {
 			return f.Status(500).JSON(fiber.Map{"status": "error", "message": "Review your input", "data": err})
 		}
 
-		newConfig := ctx.Config.GetCfg()
+		newConfig := pref.GetConfig()
 
-		_, alreadyExists := lo.Find(newConfig.Subscribers, func(s config.Subscriber) bool {
+		_, alreadyExists := lo.Find(newConfig.Subscribers, func(s p.Subscriber) bool {
 			return s.ApiaryId == newSubscriber.ApiaryId && s.HiveId == newSubscriber.HiveId
 		})
 
 		if !alreadyExists {
-			subscriber := config.Subscriber{ApiaryId: newSubscriber.ApiaryId, HiveId: newSubscriber.HiveId, CreatedAt: time.Now()}
+			subscriber := p.Subscriber{ApiaryId: newSubscriber.ApiaryId, HiveId: newSubscriber.HiveId, CreatedAt: time.Now()}
 			newConfig.Subscribers = append(newConfig.Subscribers, subscriber)
-			ctx.Config.Update(newConfig)
+			pref.UpdateConfig(newConfig)
 		}
 
 		return f.JSON(dto.ResponseHTTP{
 			Success: true,
 			Message: "Registered subscriber for creation",
-			Data:    ctx.Config.GetCfg().Subscribers,
+			Data: lo.Map(pref.GetConfig().Subscribers, func(s p.Subscriber, _ int) dto.SubscriberOutput {
+				return dto.SubscriberOutput(s)
+			}),
 		})
 	}
 }
